# document_organizer

./: README.md  config.yaml  main.py  model.py  pyproject.toml
doc_organizer/: __init__.py  arxiv_fetcher.py  arxiv_ingest.py  arxiv_pdf_enricher.py  chunking.py  embeddings.py  ingest.py  milvus_store.py  ocr.py  qa_service.py  query_analyzer.py  settings.py
static/: app.js  index.html  styles.css
tests/: test_arxiv_pdf_enricher.py  test_qa_pdf_enrichment_flow.py
