[project]
name = "doc-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "glmocr",
    "ipython>=9.10.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-redis>=0.0.7",
    "ollama>=0.6.1",
    "pillow>=12.1.0",
    "pymilvus>=2.5.6",
    "redis>=5.0.8",
    "transformers[torch]>=5.0.0",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = [
    "glm-ocr",
]

[tool.uv.sources]
glmocr = { workspace = true }
